--- a/_posts/articles/2012-10-16-footer.md
+++ b/_posts/articles/2012-10-16-footer.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: article
-title: Masonry
+title: Footer Mason
 abstract: Masonic footer? Masonic footer? Masonic footer? Masonic footer? Masonic footer?
 author_twitter: kunstkernewek
 author: Oliver Scott
