--- a/_posts/articles/2012-10-15-resound.md
+++ b/_posts/articles/2012-10-15-resound.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: article
-title: Koept at the Stuart Stephen Memorial Hall for Infant Welfare
+title: Resound Falmouth 2011
 abstract: This was the last event of a 3 day sound festival help in Penryn called Resound Falmouth.
 author_twitter: kunstkernewek
 author: Oliver Scott
