--- a/_posts/articles/2012-10-15-resound.md
+++ b/_posts/articles/2012-10-15-resound.md
@@ -9,7 +9,7 @@ categories:
 - articles
 ---
 
-# Koept at the Stuart Stephen Memorial Hall for Infant Welfare <small>Tuesday the 3rd of May 2011</small>
+### Koept at the Stuart Stephen Memorial Hall for Infant Welfare <small>Tuesday the 3rd of May 2011</small>
 
 Improvised percussion & electronics.
 Generative electronic noise.  
