--- a/_posts/articles/2012-10-15-resound.md
+++ b/_posts/articles/2012-10-15-resound.md
@@ -1,8 +1,8 @@
 ---
 published: true
 layout: article
-title: Resound Falmouth 2011
-abstract: This was the last event of a 3 day sound festival held in Penryn called Resound Falmouth.
+title: Resound Falmouth 2011 Event
+abstract: The last event of a 3 day sound festival in Penryn.
 author_twitter: kunstkernewek
 author: Oliver Scott
 categories:
