--- a/_posts/articles/2012-10-15-resound.md
+++ b/_posts/articles/2012-10-15-resound.md
@@ -2,7 +2,7 @@
 published: true
 layout: article
 title: Resound Falmouth 2011 Event
-abstract: The last event of a 3 day sound festival in Penryn.
+abstract: The closing event of a 3 day sound festival in Penryn.
 author_twitter: kunstkernewek
 author: Oliver Scott
 categories:
