--- a/_posts/releases/2012-11-08-test.md
+++ b/_posts/releases/2012-11-08-test.md
@@ -1,9 +1,9 @@
 ---
 published: true
 layout: release
-headline: Briefly summarize the news - not title.
-introduction: first paragraph - basic answers to who what when where why.
-boilerplate: short "about" section - providing independent background on the issuing company/organization/individual.
+headline: Briefly summarize the news not title.
+introduction: first paragraph  basic answers to who what when where why
+boilerplate: short about section providing independent background on the issui
 author_twitter: kunstkernewek
 author: Oliver Scott
 categories:
@@ -12,4 +12,4 @@ categories:
 
 ## The name of the event
 
-This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be 
+This event will be This event wil l be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be This event will be  
